--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
             Diario El País
         </p>
         <a href="https://elpais.com/expres/2025-02-03/la-fp-el-camino-de-muchos-extranjeros-hacia-la-residencia-en-espana.html">Leer más</a>
-        <a href="feed.xml">Suscribete a nuestro canal RSS</a>
+        <a href="feed2.xml">Suscribete a nuestro canal RSS</a>
     </body>
 </html>
